<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AirTicketFragment"
    android:padding="16dp"
    android:background="@color/black"

    >


    <TextView
        android:id="@+id/music_fly_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/style_title1"
        android:textColor="@color/grey_8"
        android:maxWidth="180dp"
        android:textAlignment="center"
        android:text="@string/search_airTicket_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout_music_fly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_frame"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_fly_fragment_name">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_frame_nested"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                app:srcCompat="@drawable/searhc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_from"
                    style="@style/input_search"
                    android:singleLine="true"
                    app:errorEnabled="true"
                    android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ-"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_from"
                    android:paddingVertical="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/grey_5" />

                <EditText
                    android:id="@+id/edit_text_to"
                    style="@style/input_search"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_to"
                    android:paddingVertical="8dp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/music_fly_list_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fly_away_musically"
        style="@style/style_title1"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_music_fly"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout_music_fly" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_fly_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:itemCount="3"

        tools:listitem="@layout/music_fly_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_fly_list_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="41dp">


    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>